--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@
 }
 
 body {
-  font-family:Roboto,Arial,sans-serif;
+  font-family: "Helvetica Neue", "Luxi Sans", "DejaVu Sans", Tahoma, "Hiragino Sans GB", "Microsoft Yahei", sans-serif;
   background: #041221;
 }
 
