--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,69 @@
 .nano>.nano-pane>.nano-slider{background:#2D2E2F;/* rgba(0, 0, 0, 0.68); */position:relative;margin:0 0;-moz-border-radius:3px;-webkit-border-radius:3px;border-radius:3px}
 .nano-pane.active,.nano-pane.flashed,.nano:hover>.nano-pane{visibility:visible\9;opacity:.99}
 
+.mobile-inner-header{
+	width: 100%;
+	height: 50px;
+	position: absolute;
+	top: 0px;
+	left: 0px;
+}
+.mobile-inner-header-icon{
+	color: #ffffff;
+	height: 50px;
+	font-size:25px;
+	text-align: center;
+	float:right;
+	width: 50px;
+	position: relative;
+	-webkit-transition: background 0.5s;
+	-moz-transition: background 0.5s;
+	-o-transition: background 0.5s;
+	transition: background 0.5s;
+}
+.mobile-inner-header-icon:hover{
+	background-color: rgba(255,255,255,0.2);
+	cursor: pointer;
+}
+.mobile-inner-header-icon span{
+	position: absolute;
+	left: calc((100% - 25px) / 2);
+	top: calc((100% - 1px) / 2);
+	width: 25px;
+	height: 1px;
+	background-color: black;
+}
+.mobile-inner-header-icon span:nth-child(1){
+transform: translateY(4px) rotate(0deg);
+	}
+.mobile-inner-header-icon span:nth-child(2){
+transform: translateY(-4px) rotate(0deg);
+	}
+.mobile-inner-nav{
+	background-color: #fff;
+	position: absolute;
+	width: 100px;
+	top: 40px;
+	right:10px;
+	padding-top: 5px;
+	display: none;
+	border:1px solid #dbdbdb;
+}
+.mobile-inner-nav a{
+	display: inline-block;
+	width: 100px;
+	line-height: 40px;
+	text-decoration: none;
+	text-align:center;
+	color: #1A1A1A;
+	word-wrap:break-word;
+}
+@media screen and (min-width: 1024px) {
+  .mobile-inner-header {
+    display: none;
+  }
+}
+
 .foot-line
 {
     display:inline-block;
